style.css
/* ... */
.W_btn_a:active span,.W_btn_b:active span,.W_btn_c:active span,.W_btn_d:active span,.W_btn_e:active span,.W_btn_f:active span,.W_btn_g:active span,.W_btn_round:active span,.W_btn_round_ico:active span,.W_btn_round2:active span,.W_btn_arrow:active span,.W_btn_v:active span {
	outline:0;
	background-image:none;
	box-shadow:inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
}

.W_btn_a_disable span,.W_btn_b_disable span,.W_btn_c_disable span,.W_btn_d_disable span,.W_btn_e_disable span,.W_btn_f_disable span,.W_btn_g_disable span {
	background-color:#e6e6e6;
	background-image:none;
	box-shadow:none;
	color:#333!important;
	opacity:.65;
	cursor:default;
}

.W_btn_e span,.W_btn_e_disable span,.W_btn_f span,.W_btn_f_disable span,.W_btn_g span,.W_btn_g_disable span {
	padding:4px 12px;
	line-height:20px;
}

.W_btn_round span,.W_btn_round_ico span,.W_btn_round2 span {
	border-radius:22px;
}

.W_btn_v span {
	background-color:rgba(232,32,32,0.9);
}

.W_btn_v:hover span {
	background-color:rgba(232,0,0,0.9);
}

.W_btn_b:hover .addicon {
	color:auto;
}

.name_card .name {
	padding:10px 12px!important;
}

.name_card .info {
	margin:0!important;
	padding:0 12px 8px!important;
}

.name_card .info dd {
	margin:0!important;
}

.name_card .links {
	padding:0 12px 10px!important;
}

.W_miniblog {
	padding-top:54px;
}

.WB_global_nav {
	height:40px!important;
	border-bottom:1px solid #3a3a3a;
	background:none!important;
	background-color:#252525!important;
	box-shadow:0 2px 3px rgba(0,0,0,.25)!important;
}

.WB_global_nav .gn_bg {
	height:40px!important;
	background:none!important;
	background-color:#252525!important;
}

.WB_global_nav .gn_header {
	width:830px;
}

.WB_global_nav .gn_logo:hover,.WB_global_nav .spec_logo:hover,.WB_global_nav .spec_logo_ba:hover {
	background-position:0 0;
}

.WB_global_nav .gn_nav,.WB_global_nav .gn_nav .gn_title {
	display:none;
}

.WB_global_nav .gn_search {
	position:absolute!important;
	right:240px!important;
	margin:7px 0;
	width:230px!important;
	height:26px!important;
	background:none!important;
}

.WB_global_nav .gn_search .gn_input {
	margin:0!important;
	padding:3px 8px!important;
	width:214px!important;
	height:20px!important;
	border-radius:0!important;
	background-color:#ccc!important;
	box-shadow:inset 0 1px 2px rgba(0,0,0,.2)!important;
}

.WB_global_nav .gn_search.gn_clicked .gn_input {
	background-color:#fff;
}

.WB_global_nav .gn_search .gn_btn {
	position:absolute;
	top:3px;
	right:5px;
	display:block;
	width:20px;
	height:20px;
}

.gn_topmenulist_search {
	top:33px!important;
	margin:0;
	padding:6px 0;
	min-width:0!important;
	width:230px!important;
	border-width:0;
	border-style:solid;
	border-color:rgba(0,0,0,.2);
	border-radius:0;
	background:#fff;
	background-clip:padding-box;
	box-shadow:0 5px 10px rgba(0,0,0,.2);
}

.gn_topmenulist_search .selectbox {
	padding:0;
	border:none;
}

.gn_topmenulist_search .selectbox dl {
	padding:4px 12px;
}

.gn_topmenulist_search .selectbox dl.current {
	margin:0!important;
	border:none!important;
}

.gn_topmenulist_search .selectbox .current {
	background:#00abef;
	color:#fff!important;
}

.gn_topmenulist_search .selectbox p.title,.gn_topmenulist_search .selectbox p.keyword {
	padding:4px 12px;
	height:auto;
	line-height:24px;
}

.gn_topmenulist_send .gn_arrow {
	top:-6px;
	width:12px;
	height:6px;
}

.gn_topmenulist_send .gn_arrow em {
	position:absolute;
	display:inline-block;
	margin-left:-1px;
	width:0;
	height:0;
	border-right:6px solid transparent;
	border-bottom:6px solid #aaa;
	border-left:6px solid transparent;
	text-indent:-9999px;
}

.gn_topmenulist_send .gn_arrow span {
	position:absolute;
	top:1px;
	left:1px;
	display:inline-block;
	margin:0;
	margin-left:-1px;
	width:0;
	height:0;
	border-right:6px solid transparent;
	border-bottom:6px solid #f2f2f2;
	border-left:6px solid transparent;
	text-indent:-9999px;
}

.gn_topmenulist_send {
	top:34px;
	border-radius:0;
}

.gn_topmenulist_send.gn_topmenulist {
	top:0;
	margin-top:9px;
	border:none;
}

.gn_topmenulist_send .title {
	padding:6px 12px;
	height:13px!important;
	background-color:#f5f5f5;
	box-shadow:inset 0 1px 0 #fff;
	line-height:13px;
}

.gn_topmenulist_send .title span {
	display:none;
}

.gn_topmenulist_send .send_weibo {
	padding:6px;
	height:auto;
}

.gn_topmenulist_send .send_weibo .input {
	border:none;
	box-shadow:0 0 0 0 #fff;
}

.gn_topmenulist_send .send_weibo .input .input_detail {
	width:391px;
	border:1px solid #ccc!important;
}

.gn_topmenulist_send .send_weibo .input .input_detail:focus {
	border-color:#56b4ef!important;
	box-shadow:inset 0 1px 3px rgba(0,0,0,.05),0 0 8px rgba(82,168,236,.6);
}

.gn_topmenulist_send .send_weibo .func {
	float:none;
	padding-top:6px;
	padding-right:0;
	padding-bottom:0;
	width:auto;
}

.gn_topmenulist_send .send_weibo .num {
	top:0;
	right:0;
}

.gn_topmenulist_send .send_weibo .num span {
	padding:8px 12px;
	height:auto;
	font-size:12px;
	line-height:13px;
}

.gn_topmenulist_send .send_weibo .func a.send_btn {
	padding:4px 16px;
	background:none;
	background-color:#019ad2;
	font-size:13px;
	line-height:16px;
}

.gn_topmenulist_send .send_weibo .func a.send_btn:hover {
	background:none;
	background-color:#3a87ad;
}

.gn_topmenulist,.gn_topmenulist_set,.gn_topmenulist_notice,.gn_tips {
	border:none!important;
	border-radius:0!important;
}

.gn_tips {
	padding:6px 12px!important;
}

.gn_tips .tips_list {
	padding:0!important;
}

.gn_tips .tips_list li {
	padding:0 12px!important;
}

.gn_topmenulist_set,.gn_topmenulist_notice {
	top:40px!important;
	padding:6px 0!important;
}

.gn_topmenulist .gn_text_list li {
	height:32px!important;
	line-height:24px!important;
}

.gn_topmenulist .gn_text_list li a {
	padding:4px 12px!important;
	line-height:24px;
}

.gn_topmenulist .gn_notice_app {
	padding:0!important;
}

.gn_topmenulist .gn_notice_app dt {
	padding:0!important;
}

.gn_topmenulist .gn_notice_app dt a {
	display:block;
	padding:4px 12px!important;
	color:#333;
	line-height:24px;
}
/* ... */

